Fix formatting issues and expand Java tutorial content
- Fix missing images in e-card-game.md by replacing HTML img tags with Markdown syntax
- Correct image paths to use /images/e-card/ directory
- Fix code block formatting issue in e-card-game.md (line 270)
- Add comprehensive introductory content to Java tutorial:
  - Java learning roadmap with 4 stages
  - Java history and version evolution (1991-2023)
  - Core design philosophies and language comparison
  - Detailed development environment setup guide
  - JVM architecture and garbage collection overview
- Add 7 new chapters covering advanced Java topics:
  - Collection Framework (List, Set, Map)
  - Generics and type system
  - Lambda expressions and functional interfaces
  - Stream API for functional data processing
  - IO and NIO (traditional and modern)
  - Multithreading basics
  - Java 8-17 new features

🤖 Generated with CodeArts Agent